# mariadb-plugin

./: CMakeLists.txt  README.md  dockerfile  mariadb_plugin.c  obb-key-management-plugin.c  obb_key_service.c  obb_key_service.h  onboardbase_key_management.cc  onboardbase_key_management.cnf  onboardbase_key_management_plugin.cc  test  testable_version.cc
.github/workflows/: build.yml
scripts/: build_plugin.sh
